Directions up to writing all course data for 1 page to file

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -196,4 +196,44 @@ This time, you'll use another `await` for the `axios` call and store it in `resp
 6. The relevant data is in the table. Go to Lions Den yourself and make a request for the course data and inspect the course table (using Inspect Element) to see if it has a unique id, so you could use `getElementById` as before. You can log its `innerHTML` property to see if you get the table of course data.
 7. Next we'll want to get all of the table headings. This will make it so that we know which table cell corresponds to which piece of course data. This is important for making our scraper less fragile. For example, the third column might correspond to the course code now, but if columns are added or removed (as they have been in the past), it may not be that way in the future. To get all of the headings, you'll want to use <a href="https://www.npmjs.com/package/node-html-parser#user-content-htmlelementqueryselectorallselector">`querySelectorAll('th')`</a> which will give you all of the <code>&lt;th&gt;</code> tags belonging to the table as an `Array`.&nbsp; <strong>IMPORTANT NOTE</strong>: The POST request to the Lions Den to search for courses sometimes fails. In this case getting the element by id will return <code>null</code> so calling <code>querySelectorAll</code> on it will crash the program. To prevent this, you can use the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Optional_chaining#try_it">optional chaining operator</a> by placing a question mark before each <code>.</code> when you're not sure if what comes before it will be <code>null</code> So, if you had an object referred to by <code>foo</code> that may or may not have a property <code>a</code>, you could use `foo.prop?.x` to "short-circuit" this property chain, resulting in `undefined` when there is no `prop` property on `foo` or whatever `foo.prop.x`, otherwise. The other option is to just put this in an `if` statement checking if `foo.prop != null` (this checks for `null` and `undefined`).
 8. If you get a non-<code>null</code> value for the element, calling <code>querySelectorAll</code> here will give you an <code>Array</code> of all the cells. For each cell you'll want to get the text. So let's use the <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/map">`map`</a> method on the `Array` mapping each element to its <a href="https://github.com/taoqf/node-html-parser#htmlelementtext"><code>text</code></a> property.</li>
-9. Check to see if you see the Array of table headings. Since we'll want to make each of these property keys, let's use snake case (spaces replaced with underscores, all lowercase letters). So, add to the output of the function we provide to `map` by replacing all spaces with underscores (<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replaceAll&lt;code&gt;replaceAll">replaceAll</a> or for better browser compatibility use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replace#description">replace</a> with a RegEx with a <code>g</code> flag, with `g` standing for global). Then use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/toLowerCase"><code>toLowerCase</code></a>.
+9. Check to see if you see the Array of table headings. Since we'll want to make each of these property keys, let's use snake case (spaces replaced with underscores, all lowercase letters). So, add to the output of the function we provide to `map` by replacing all spaces with underscores (<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replaceAll&lt;code&gt;replaceAll">replaceAll</a> or for better browser compatibility use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/replace#description">replace</a> with a RegEx with a <code>g</code> flag, with `g` standing for global). Then use <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/toLowerCase"><code>toLowerCase</code></a>. If you log the result, you should see an `Array` `['add', 'textbooks', 'course_code', 'name', 'type', 'faculty', 'seats_open', 'status', 'schedule',	'credits', 'begin_date', 'end_date']`. Store this result in a variable like `courseDataHeadings'. 
+10. Next we'll want to get each row of course data. As before, you can use `querySelectorAll`, but this time use `tr` for the table rows. Then as before, use `map` on the resulting Array, this time mapping each row to an Array of all of its cells, again using `querySelectorAll` to get an Array of table data cells (`td`). This will yield an Array of Arrays of table data cells, one for each row. Then on this second `querySelectorAll`, call `map` again to get each cell's `text` property as before, calling [`trim`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String/trim) on the result to remove leading and trailing whitespace. Now, if you log the result, you'll instead see the table data cells replaced with their (trimmed) text. Store this in a variable as well, say `courseDataRows`.
+11. You'll notice there are some rows that don't contain any course data. When inspecting the table in the course search, you'll see that these are table rows with a class of `subItem` and only a single cell of data (spanning 12 columns):
+```
+<tr class=" subItem" style="display:none;">
+			<td colspan="12">
+	        <div style="width: 96%">
+	            
+	            <div>
+	                
+	            </div>
+	        </div>	    
+	    </td>
+		</tr>
+```
+To exclude these from the list, we can add [`filter`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter) to the end, but we'll do this in the next step as we'll want to filter anything without a course code.
+12. Now for each `courseDataRow`, we'll want to create an object where the keys are the column headings and the values are the table cells of course data at the same indices. For example, the table heading at index 2 is `course_code`, which will be the key for the item at index 2 of any table row, e.g., `CSC 352 01`. To accomplish this, we'll first use `map` on the `courseDataRows` Array. Then for each `Array` `courseDataRow`, we will map it to the result of [`reduce`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/reduce), which will be used to combine each `key-value` pair into a single object. The table looks something like the following:
+```
+acc                           | courseDataRow      | index | courseDataHeadings[index]
+--------------------------------------------------------------------------------------
+{}                            | ''                 | 0     | 'add'
+--------------------------------------------------------------------------------------
+{                             | ''                 | 1     | 'textbooks'
+ 'add': ''                    |                    |       |
+}                             |                    |       |
+--------------------------------------------------------------------------------------
+{                             | 'CSC 352 01'       | 2     | 'course_code'
+ 'add': '',                   |                    |       |
+ 'textbooks: '',              |                    |       |
+}                             |                    |       |
+--------------------------------------------------------------------------------------
+{                             | 'Back-End WebDev'  | 3     | 'name'
+ 'add': '',                   |                    |       |
+ 'textbooks: '',              |                    |       |
+ 'course_code: 'CSC 352 01',  |                    |       |
+}                             |                    |       |
+--------------------------------------------------------------------------------------
+```
+So to use reduce here, you pass a function that takes three inputs, the first is the accumulator (denoted acc above), the second is the item from the Array (courseDataRow here), and the third is the `index`. You also pass a second argument that's the initial value of the accumulator (acc). After the initial accumulator, it will be the return value from the previous item. So, here the goal is to make the return value from each of the rows be the accumulator for the next row, so when we go through each `courseDataRow`, we will have an object with each property. (Note the last column is not one of the inputs here.) What this means is that say given an input `acc` object of `{'add': '', 'textbooks': ''}`, an input of `courseDataRow` 'CSC 352 01' and an input of index `2`, we want to get an output of `{'add': '', 'textbooks': '', course_code: 'CSC 352 01'}`. To do this we'd return an object with all properties from the current accumulator and the additional property with key `courseDataHeadings[index]` and `value` `courseDataRow`. You can do this in one line by performing a (shallow) copy of the `acc` object using spread syntax and adding a computed property object name (See https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax#spread_in_object_literals and https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#computed_object_property_names_and_destructuring.)
+14. You should get an Array of objects from the previous step, but as mentioned earlier, we'll want to remove the non-course rows. So, call `filter` on the result to only include the ones with a `courseCode` property (You're checking that the `courseCode` property is not an empty string, which is the only falsy string.) So you can just `return` the `courseCode` of the input here to remove all objects that don't have course codes. Store the result of this in a variable like `pageResults` (since it's only one of the pages).
+15. Now we can do this for each page and do additional processing, but let's write this result in a file. To do this we'll use the built-in `fs` Node module (no intallation is necessary). `require` the `fs` module and store it in a variable `fs` at the top. Return `pageResults` from step 14 and then in the function passed to `then`, use the [`writeFileSync`](https://nodejs.org/api/fs.html#fswritefilesyncfile-data-options) function of `fs` to write the result of calling [JSON.stringify](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) on the `result` in the file `course-data.json`. The `JSON.stringify` will serialize the object (convert it to a format that could be written to a file or transmitted as data) as a string in `JSON`, so we could deserialize it later with the [`JSON.parse`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse) method that'll convert it back to an object.
