Start directions for going through pages, fix link

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -185,7 +185,7 @@ If you did this correctly, then after running the code, you should see an output
 
 Now that we have the browser refresh key and session cookie, we can make the needed POST request to get the first page of course data. To do this:
 1. Define an `async` function, say `getCourseData`, that calls the function you defined before to get the session cookie and browser refresh key and stores it in a variable. Since the function is `async`, use `await` here. Since you're returning an object, you may want to look up [destructuring assignment](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#syntax) which allows you to write one-liners to define multiple variables for each property.
-2. Define a variable `bodyRequestData` whose value is in the above section (https://github.com/jschanker/csc3520-fall2022/edit/main/day1-9-8-22.md#inspection-of-requests-and-responses). Be sure to replace the `browserRefreshKey` to reference the variable that holds this value and remove the subject area CSC as we'll want to get the search results for every area. You might also want to replace `2022;FA` with a variable that holds this value, so it'll be easier to change in the future for other semesters. Look up [template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals) to see a nice way to combine variable values and string literals without using string concatenation (`+`).
+2. Define a variable `bodyRequestData` whose value is in the above section (https://github.com/jschanker/csc3520-fall2022/blob/main/day1-9-8-22.md#:~:text=fun%20error%20message%3A-,Body%20data%20(Payload),-%3A%20Includes%20value%20of). Be sure to replace the `browserRefreshKey` to reference the variable that holds this value and remove the subject area CSC as we'll want to get the search results for every area. You might also want to replace `2022;FA` with a variable that holds this value, so it'll be easier to change in the future for other semesters. Look up [template literals](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals) to see a nice way to combine variable values and string literals without using string concatenation (`+`).
 3. Now make a POST request using `axios`. This time you'll use `axios` (no `axios.post` or `axios.get`) and pass it an object with the **three** relevant properties:
   1. `url` is the request url, `method` is `"POST"`, 
   2. `data` will be `bodyRequestData`, and 
@@ -213,7 +213,7 @@ This time, you'll use another `await` for the `axios` call and store it in `resp
 ```
 To exclude these from the list, we can add [`filter`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/filter) to the end, but we'll do this in the next step as we'll want to filter anything without a course code.
 
-15. Now for each `courseDataRow`, we'll want to create an object where the keys are the column headings and the values are the table cells of course data at the same indices. For example, the table heading at index 2 is `course_code`, which will be the key for the item at index 2 of any table row, e.g., `CSC 352 01`. To accomplish this, we'll first use `map` on the `courseDataRows` Array. Then for each `Array` `courseDataRow`, we will map it to the result of [`reduce`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/reduce), which will be used to combine each `key-value` pair into a single object. The table looks something like the following:
+12. Now for each `courseDataRow`, we'll want to create an object where the keys are the column headings and the values are the table cells of course data at the same indices. For example, the table heading at index 2 is `course_code`, which will be the key for the item at index 2 of any table row, e.g., `CSC 352 01`. To accomplish this, we'll first use `map` on the `courseDataRows` Array. Then for each `Array` `courseDataRow`, we will map it to the result of [`reduce`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/reduce), which will be used to combine each `key-value` pair into a single object. The table looks something like the following:
 ```
 acc                           | courseDataRow      | index | courseDataHeadings[index]
 --------------------------------------------------------------------------------------
@@ -237,6 +237,17 @@ acc                           | courseDataRow      | index | courseDataHeadings[
 ```
 So to use reduce here, you pass a function that takes three inputs, the first is the accumulator (denoted acc above), the second is the item from the Array (courseDataRow here), and the third is the `index`. You also pass a second argument that's the initial value of the accumulator (acc). After the initial accumulator, it will be the return value from the previous item. So, here the goal is to make the return value from each of the rows be the accumulator for the next row, so when we go through each `courseDataRow`, we will have an object with each property. (Note the last column is not one of the inputs here.) What this means is that say given an input `acc` object of `{'add': '', 'textbooks': ''}`, an input of `courseDataRow` 'CSC 352 01' and an input of index `2`, we want to get an output of `{'add': '', 'textbooks': '', course_code: 'CSC 352 01'}`. To do this we'd return an object with all properties from the current accumulator and the additional property with key `courseDataHeadings[index]` and `value` `courseDataRow`. You can do this in one line by performing a (shallow) copy of the `acc` object using spread syntax and adding a computed property object name (See https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax#spread_in_object_literals and https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Destructuring_assignment#computed_object_property_names_and_destructuring.)
 
-16. You should get an Array of objects from the previous step, but as mentioned earlier, we'll want to remove the non-course rows. So, call `filter` on the result to only include the ones with a `courseCode` property (You're checking that the `courseCode` property is not an empty string, which is the only falsy string.) So you can just `return` the `courseCode` of the input here to remove all objects that don't have course codes. Store the result of this in a variable like `pageResults` (since it's only one of the pages).
+13. You should get an Array of objects from the previous step, but as mentioned earlier, we'll want to remove the non-course rows. So, call `filter` on the result to only include the ones with a `courseCode` property (You're checking that the `courseCode` property is not an empty string, which is the only falsy string.) So you can just `return` the `courseCode` of the input here to remove all objects that don't have course codes. Store the result of this in a variable like `pageResults` (since it's only one of the pages).
 
-17. Now we can do this for each page and do additional processing, but let's write this result in a file. To do this we'll use the built-in `fs` Node module (no intallation is necessary). `require` the `fs` module and store it in a variable `fs` at the top. Return `pageResults` from step 16 and then in the function passed to `then`, use the [`writeFileSync`](https://nodejs.org/api/fs.html#fswritefilesyncfile-data-options) function of `fs` to write the result of calling [JSON.stringify](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) on the `result` in the file `course-data.json`. The `JSON.stringify` will serialize the object (convert it to a format that could be written to a file or transmitted as data) as a string in `JSON`, so we could deserialize it later with the [`JSON.parse`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse) method that'll convert it back to an object.
+14. Now we can do this for each page and do additional processing, but let's write this result in a file. To do this we'll use the built-in `fs` Node module (no intallation is necessary). `require` the `fs` module and store it in a variable `fs` at the top. Return `pageResults` from step 16 and then in the function passed to `then`, use the [`writeFileSync`](https://nodejs.org/api/fs.html#fswritefilesyncfile-data-options) function of `fs` to write the result of calling [JSON.stringify](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/stringify) on the `result` in the file `course-data.json`. The `JSON.stringify` will serialize the object (convert it to a format that could be written to a file or transmitted as data) as a string in `JSON`, so we could deserialize it later with the [`JSON.parse`](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/JSON/parse) method that'll convert it back to an object.
+
+15. Now let's scrape every page of data. To start, first make sure that you use `let` (insetead of `const`) for your declaration of `browserRefreshKey` at the top of the `getCourseData` function definition as we'll need to get a new one for each page. Below this line declare and initialize the following additional variables:
+  - `allResults`, an Array of all the page results, which should be initialized to an empty `Array`
+  - `page`, which will be the requested page number (`1` is the second page of results, `2` is the third page, etc.). When you make a course search, no value is provided but using `0` will work as well. It'll probably be clearer to initialize this variable to `0` so you can bump up the counter with each subsequent page request instead of handling the case for the empty string separately.
+  - `MAX_REQUESTS`, a constant represent the maximum number of attempts. This is necessary because a number of requests to get a page of course data will inexplicably fail. Setting this to say `1024` to get the say `64` pages of course data should be large enough, as it'd allow an average of `15` failed requests per page (`15 * 64` failed requests + 64 successful requests = `16 * 64 = 1024` total requests). Of course we could have more pages of course data in the future, but even with say 100 pages, it would allow over 9 failed requests per page on average. This variable is not strictly necessary as we could just keep going until we reach the last page, but we'll use this so that if the script were set to run automatically via a GitHub action to repeatedly scrape Lions Den for course updates, it would be programmed to stop after too many failed requests.
+16. Next wrap all of the lines excluding the `return` statement in a `for` loop, where we initialize some counter variable to `0`, continue while the counter variable is less than `MAX_REQUESTS`, and bump it up one each time.
+17. Instead of `return`ing `pageResults`, we'll want to return the `Array` `allResults`. In the `for` loop, be sure to append all the items from `pageResults` to the `allResults` `Array`. To do this, you can use the Array's [push](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push) method, which is used to add `1` or more items to the end of an Array. Because using `a.push(b)` will just add one item to `a` (e.g., if `a = [1, 2, 3]` and `b = [4, 5]`, then the Array `a` becomes `[[1, 2, 3], [4, 5]]` instead of `[1, 2, 3, 4, 5]`), you can use the spread syntax with `push` to instead [merge the two Arrays](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push#merging_two_arrays). For this example, with two items, this would effectively be doing `a.push(b[0], b[1])`.
+18. Modify your initialization of `bodyRequestVariable` (which should be inside the for loop so it gets updated!) to make use of the `page` value. To figure out where to place this value, make a request to search all courses on Lions Den and then click on one of the letter ranges on the bottom while Developer Tools is open. Then check the Network tab and see which name is associated with a number such as `42` (if you clicked the `43`rd page of results.)
+![image](https://user-images.githubusercontent.com/9159008/192122765-36f198ed-1206-48cd-bfeb-a9de2eb310c0.png)
+19. 
+
