Shorten request for subsequent pages of course data search scraping

--- a/day1-9-8-22.md
+++ b/day1-9-8-22.md
@@ -247,7 +247,9 @@ So to use reduce here, you pass a function that takes three inputs, the first is
   - `MAX_REQUESTS`, a constant represent the maximum number of attempts. This is necessary because a number of requests to get a page of course data will inexplicably fail. Setting this to say `1024` to get the say `64` pages of course data should be large enough, as it'd allow an average of `15` failed requests per page (`15 * 64` failed requests + 64 successful requests = `16 * 64 = 1024` total requests). Of course we could have more pages of course data in the future, but even with say 100 pages, it would allow over 9 failed requests per page on average. This variable is not strictly necessary as we could just keep going until we reach the last page, but we'll use this so that if the script were set to run automatically via a GitHub action to repeatedly scrape Lions Den for course updates, it would be programmed to stop after too many failed requests.
 16. Next wrap all of the lines excluding the `let`/`const` statements for the variables and  `return` statement in a `for` loop, where we initialize some counter variable to `0`, continue while the counter variable is less than `MAX_REQUESTS`, and bump it up one each time. The variable declarations/initializations should be above the loop while the `return` statement should be below it. Some variables such as `bodyRequestData`, the one assigned to the `response` from the `POST` request, and `parseTree` will be declared and initialized in the `for loop`. Note that any variable declared (i.e., with `let` or `const`) inside the `for` loop will _not_ be available outside of it. Note it is possible to declare a variable with an assigment like `let foo;` outside of the loop and then set its value inside the loop (e.g., `foo = 42`. Then you will be able to access its value outside of the loop.   
 17. Instead of `return`ing `pageResults`, we'll want to return the `Array` `allResults`. In the `for` loop, be sure to append all the items from `pageResults` to the `allResults` `Array`. To do this, you can use the Array's [push](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push) method, which is used to add `1` or more items to the end of an Array. Because using `a.push(b)` will just add one item to `a` (e.g., if `a = [1, 2, 3]` and `b = [4, 5]`, then the Array `a` becomes `[[1, 2, 3], [4, 5]]` instead of `[1, 2, 3, 4, 5]`), you can use the spread syntax with `push` to instead [merge the two Arrays](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/push#merging_two_arrays). For this example, with two items, this would effectively be doing `a.push(b[0], b[1])`.
-18. Modify your initialization of `bodyRequestData` (which should be inside the for loop so it gets updated!) to make use of the `page` value. To figure out where to place this value, make a request to search all courses on Lions Den and then click on one of the letter ranges on the bottom while Developer Tools is open. Then check the Network tab and see which name is associated with a number such as `42` (if you clicked the `43`rd page of results.)
+18. Modify your initialization of `bodyRequestData` (which should be inside the for loop so it gets updated!) to match what's sent when you get the pages of course results beyond the initial one. To figure out the changes you need, make a request to search all courses on Lions Den and then click on one of the letter ranges on the bottom while Developer Tools is open. Then check the Network tab. You'll notice two differences:
+    - Not all name-value pairs are sent in the body of the request data. (The ones after the semester are no longer included.) So, in the template literal include a [placeholder](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Template_literals#:~:text=other%20parts%20called-,placeholders,-%2C%20which%20are%20embedded) for an expression with the [conditional operator](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Conditional_Operator) which uses the template literal with this remaining part of the request data when `page` is not `0` (i.e., `page` is truthy) and the empty string otherwise.
+    - The subsequent request makes use of the `page` value. To figure out where to place this value, see which name is associated with a number such as `42` (if you clicked the `43`rd page of results.)
 ![image](https://user-images.githubusercontent.com/9159008/192122765-36f198ed-1206-48cd-bfeb-a9de2eb310c0.png)
 19. After getting the parse tree from the response, call `getBrowserRefreshKey` passing this parse tree as an input and _reassign_ `browserRefreshKey` to be the `return`ed value. This will be used so you can make the `POST` request for the next page since browser refresh keys can only be used once. Add a `console.log` statement indicating the current page and `browseRefreshKey`. This will be used for you to monitor the progress of the execution of the script and how many successful/failed requests there are.
 20. If you didn't do this already, make sure you have an `if` statement surrounding the code where you get `courseDataHeadings` and `courseDataRows`. The condition should be that the element with the id of the course data table isn't `null` (i.e., that the request for the page of results was successful). In the body of that `if` statement, bump up the `page` variable. (You only want to go to the next page if you were able to get the results for page `page`.) 
